# ChangeLog for www-apache/mod_auth_kerb
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_auth_kerb/ChangeLog,v 1.5 2008/01/27 16:53:08 hollow Exp $

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org> ChangeLog, Manifest:
  fix metadata; cleanup

  21 Sep 2007; Benedikt Böhm <hollow@gentoo.org> mod_auth_kerb-5.3.ebuild:
  remove apache-1 cruft

  29 Jul 2007; Christian Heim <phreak@gentoo.org>
  +files/11_mod_auth_kerb.conf, +metadata.xml, +mod_auth_kerb-5.3.ebuild:
  Moving net-www/mod_auth_kerb to www-apache/mod_auth_kerb (#81244).

  15 Jan 2007; Luca Longinotti <chtekk@gentoo.org>
  -files/mod_auth_kerb-5.0-CVE-2006-5989.patch,
  -files/mod_auth_kerb-5.0-axps1.patch,
  -files/mod_auth_kerb-5.0-cache.patch,
  -files/mod_auth_kerb-5.0-exports.patch,
  -files/mod_auth_kerb-5.0-gcc4.patch, metadata.xml,
  -mod_auth_kerb-5.0_rc6.ebuild, -mod_auth_kerb-5.0_rc6-r1.ebuild,
  -mod_auth_kerb-5.0_rc7.ebuild, -mod_auth_kerb-5.0_rc7-r1.ebuild,
  mod_auth_kerb-5.3.ebuild:
  Cleanup.

  15 Jan 2007; Torsten Veller <tove@gentoo.org> mod_auth_kerb-5.3.ebuild:
  Marked stable on x86 for Ticho (#155782)

  14 Jan 2007; Christian Heim <phreak@gentoo.org>
  mod_auth_kerb-5.0_rc7-r1.ebuild:
  Also removing the exports patch from 5.0rc7-r1, breaks the compilation
  (thanks to Ticho for reporting).

  13 Jan 2007; Christian Heim <phreak@gentoo.org>
  mod_auth_kerb-5.0_rc7-r1.ebuild:
  Removing mod_auth_kerb-5.0-cache.patch and mod_auth_kerb-5.0-axps1.patch
  from the patchlist for mod_auth_kerb-5.0-rc7-r1 (thanks to Andrej Kacian for
  reporting it), as UPSTREAM already included these fixes.

  10 Jan 2007; Christian Heim <phreak@gentoo.org>
  mod_auth_kerb-5.0_rc6-r1.ebuild, mod_auth_kerb-5.0_rc7-r1.ebuild:
  Making mod_auth_kerb-5.0-axps1.patch, mod_auth_kerb-5.0-cache.patch and
  mod_auth_kerb-5.0-exports.patch conditional on USE=apache2, allowing
  mod_auth_kerb to still work and compile w/ =net-www/apache-1.3*.
