@@ -1,5 +1,5 @@
 <IfDefine AUTH_KERB>
-LoadModule auth_kerb_module    modules/mod_auth_kerb.so
+LoadModule auth_kerb_module modules/mod_auth_kerb.so
 
 <Directory "/var/www/private">
 	AuthType Kerberos
