@@ -1,7 +1,17 @@
-AUX 12_mod_auth_mysql.conf 3885 RMD160 c63d36137bb6467f3538d9ab596b98a186492dc8 SHA1 c9c279f5bbbe211a2699b6187ea1441e48a06440 SHA256 0dfbbca6d2e2c635471e43a526bd14881170295f2f193a4ce2c3460d2548e6ca
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 12_mod_auth_mysql.conf 3806 RMD160 abd5cacf3d877da89d14603cca0ce33f123352f2 SHA1 0255beb165acd3676d6998ff6799355f2443db48 SHA256 e9ae1ba9ec53006e415db05a4bbc480b8fe682961b085852e30d6eecf3da14a8
 AUX mod_auth_mysql-3.0.0-apache-2.2.patch 5919 RMD160 e478e80251f790b2cf26e66ed3c58a73cd7cd9e0 SHA1 809938d6e15d0eb2daef31876fba41632e641e0e SHA256 ff8ec4537ea365cc365adaf5118165e5f655fdc6d5359f2200ccce2c96d836ff
 AUX mod_auth_mysql-3.0.0-htpasswd2-auth-style.patch 1686 RMD160 08b2912658033b725f21ef4dc1a784fbf21d4daa SHA1 42778fbee4fd313837f21eddbcf8c1ffd90fafd4 SHA256 c4a056b01b6bdd8aab1e37d9e7bf6e621cab1b9de49bccaae197a343f6ee4370
 DIST mod_auth_mysql-3.0.0.tar.gz 19257 RMD160 ef68d6ec7c99c4059a38ba74f41c22e2f88f3863 SHA1 885dd0bfc64210d32e6705fdb10b2c0ca831a27c SHA256 56da2e386583548f2fd9976101633f028d5d4649b46f428ff1d0dd1639efbad4
 EBUILD mod_auth_mysql-3.0.0-r2.ebuild 917 RMD160 56bca0c48f4964f5ee1bc377b2c301a4d28a53dd SHA1 41ffd3c7d114ebeb50706f2b4e4ff22c92864bc1 SHA256 27b73b0405b3d4b0800b5a4092c8bfae5226d548169d9e2dad78afe107984f4a
-MISC ChangeLog 5264 RMD160 b464e4e34b4aee53a3ca7d30304e6c43cb6191e8 SHA1 e51c77085939692f57e0b10017450f0473a5877c SHA256 69547780aff31c1fd3269385b98d54392d6d17bc61aca54fc282e42aaacd1a7c
+MISC ChangeLog 5357 RMD160 765ecf7bf317a9b916fdc6639d8d0ee0b7636a9d SHA1 f7328038474c738121b81c813105878cdd7fb712 SHA256 f61b893f172ddc433e8c6e3b2d990b6cd33f32d6c9e5aa07974dceae13879626
 MISC metadata.xml 180 RMD160 b762599c4a9e042758cf4e58cf968d0dfaf37c8b SHA1 d3170a92499dc385c738add0d516d840e74b6415 SHA256 325b6e1d31edfdcaf7d563f03276382d77e6edf58d8f7d653086b7e726792c51
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkeh/0QACgkQmPFBzbX68WH/ewCdH7PWtRkLB1rQKLkulAywZgpk
+nzkAnjjJP5Hzb/kAbH8y70O4afC5to8B
+=toKg
+-----END PGP SIGNATURE-----
