@@ -1,8 +1,18 @@
-AUX 50_mod_auth_nufw.conf 117 RMD160 fa810b83fd166403daff48daa650e035bbc4a9cb SHA1 534b31b5ff2ea739fa3a47f728bb5b7edfdd0ad6 SHA256 3e729160a919aa8d1aad215cebf10d89a3295d0edf830bb6a333d06b37d27bd3
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+AUX 50_mod_auth_nufw.conf 112 RMD160 baeacc8ce03361ffee89ea5a806bdc6a148de978 SHA1 602f6d38e39411d60bdda3841da16c721992d0b8 SHA256 d7e56dd4916e1996eb947fbd99de14d3baa088a6fa56d4cc1be362ec74dba798
 AUX mod_auth_nufw-2.2.0-configure_in.patch 1937 RMD160 caeb6b9c6ead11bf9ee53836799441779b43cd7f SHA1 d28bfc59f40126479d101a2be74625193c23fa6e SHA256 c02cea50dde1c26ceeef3dcbf66508d02d648493cd7f780711068a26e3577e2a
 DIST mod_auth_nufw-2.2.0.tar.gz 42703 RMD160 75469adb58e24dd06837eea1256cf2069e76ac93 SHA1 46a37b29d5c2e1bce320505cd8221a582d3cc0d8 SHA256 e97379c4b032bb8109df048ca675646ff9c9df934c3089c882ba2f1fef49e173
 DIST mod_auth_nufw-2.2.1.tar.gz 104300 RMD160 87b5e86f50fa169ed9e9224405f1dd27bcc504f0 SHA1 ebb1837b7d7f86d6e21fe840cfaff9b834b51011 SHA256 fee066dd68c602dd5082691e19e419c4e451a631158611d5992e52e91df154b9
-EBUILD mod_auth_nufw-2.2.0.ebuild 1569 RMD160 1e916d0359839804a9a8069553e0ed71d33d4b19 SHA1 0b24c8083f17f25c4ee4e3b545ac9449dfc2026b SHA256 816ee01a3f06f0c497e6f4e8ec55b3c7afe1ab04426ba013dc44b994f7d826eb
-EBUILD mod_auth_nufw-2.2.1.ebuild 1414 RMD160 e84814598e1f4dd35f49742786674b6aa4575ad2 SHA1 d4f28089be90a81d0348c59fee92d1521941322d SHA256 053d8fb949eb6c6226144d644b4e9b9e666d3677e2b8f34c0516735f43918270
-MISC ChangeLog 1675 RMD160 323fc49b6b9408e03487b6f50c5b0f0c7deb7f0e SHA1 7498e32a7412a3f393c47fb9ded9e895fdf49ab3 SHA256 409d60429ef27775584f7fedbb4712372833b296b4822c2157264b024bfe6f8f
+EBUILD mod_auth_nufw-2.2.0.ebuild 1568 RMD160 15482cf370492a04f5d62dcf5835cd80feec5a84 SHA1 edb6580c7e9cdb28b5a47b1e62d3c4cfd01c4a10 SHA256 fdcd1da2f616ec859ffeaf79d845ee7f75783fcc038f7eb339696e1fa6d16a48
+EBUILD mod_auth_nufw-2.2.1.ebuild 1413 RMD160 24a6a412e6675197f7e3dd29a6eecc1d3778a827 SHA1 cbc2f23a932109bcea0533b9e1ddd930a09ee4be SHA256 12c9c8963a84781dfc75917b5687fe01f462176440cbf24acdfbe2fcdf7e6a8a
+MISC ChangeLog 1873 RMD160 980d9effb2cd1034d6c7a30fb1d01099ad2d22f4 SHA1 a9804fc84506a8cd426e5f58830247a27a206550 SHA256 144ebdaeecacf88b7bfad421e0424595d08cbec62412866d4b9da184682f0ba9
 MISC metadata.xml 298 RMD160 42658edeb89d62bf18bc9562280953153dcb182a SHA1 d9e6e505b41289470f4f5ff83db6768b0dbda994 SHA256 3f0c5e1607b53756bf87acea7196a98866f254aaec52a86001eb949d3d96bccc
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.8 (GNU/Linux)
+
+iEYEARECAAYFAkeh/+MACgkQmPFBzbX68WFJjACfTjRK20O3M8d6muBOB28cu3A+
+WmQAn0CZaYC3kpc6E4h20ioLR4lLOEUB
+=zXxn
+-----END PGP SIGNATURE-----
