@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/mod_auth_kerb
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_auth_kerb/ChangeLog,v 1.5 2008/01/27 16:53:08 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_auth_kerb/ChangeLog,v 1.6 2008/01/31 17:00:47 hollow Exp $
+
+  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
+  files/11_mod_auth_kerb.conf, mod_auth_kerb-5.3.ebuild:
+  fix depend.apache usage wrt #208033
 
   27 Jan 2008; Benedikt Böhm <hollow@gentoo.org> ChangeLog, Manifest:
   fix metadata; cleanup
